--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.1",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.5.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/storage": "^4.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.1",
+    "@ionic/cli": "^7.1.5",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
