--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@capacitor-community/contacts": "^5.0.4",
+    "@capacitor-community/fcm": "^5.0.2",
     "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.5.1",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.0.0",
